--- a/HDR-defense.html
+++ b/HDR-defense.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
 
+  <!-- Google Scholar metadata -->
+  <meta name="citation_title"
+        content="Deciphering the Realm of Artificial Intelligence Security: Journeying from Backdoor Attacks in Deep Learning to Safeguarding their Intellectual Property through Watermarking"/>
+
+  <meta name="citation_author" content="Kassem Kallas"/>
+
+  <meta name="citation_publication_date" content="2025/06/03"/>
+
+  <meta name="citation_pdf_url"
+        content="https://raw.githubusercontent.com/KassemKallas/HDR_Defense_Slides/main/HDR-presentation.pdf"/>
+
+  <meta name="citation_technical_report_institution"
+        content="Université de Bretagne Occidentale"/>
+
+  <meta name="citation_abstract"
+        content="HDR defense presentation summarizing a research journey in artificial intelligence security, focusing on backdoor attacks, adversarial learning, defense mechanisms, and intellectual property protection through deep learning watermarking."/>
+
+  <title>HDR Defense — Artificial Intelligence Security (Kassem Kallas)</title>
+</head>
+
+<body>
+  <h1>HDR Defense Presentation</h1>
+
+  <h2>Deciphering the Realm of Artificial Intelligence Security</h2>
+
+  <p><strong>Author:</strong> Kassem Kallas</p>
+  <p><strong>Institution:</strong> Université de Bretagne Occidentale (UBO)</p>
+  <p><strong>Date:</strong> 3 June 2025</p>
+  <p><strong>Degree:</strong> Habilitation à Diriger des Recherches (HDR)</p>
+
+  <p>
+    <a href="https://raw.githubusercontent.com/KassemKallas/HDR_Defense_Slides/main/HDR-presentation.pdf">
+      Download presentation (PDF)
+    </a>
+  </p>
+
+  <p>
+    This presentation summarizes the research contributions defended during the HDR,
+    covering adversarial attacks, backdoors in deep learning, robust defenses,
+    and intellectual property protection via watermarking.
+  </p>
+</body>
+</html>
